RESOLVED FIXED191799
Tweak _showSafeBrowsingWarningWithTitle SPI
https://bugs.webkit.org/show_bug.cgi?id=191799
Summary Tweak _showSafeBrowsingWarningWithTitle SPI
Alex Christensen
Reported 2018-11-16 20:44:33 PST
Tweak _showSafeBrowsingWarningWithTitle SPI
Attachments
Patch (10.63 KB, patch)
2018-11-16 20:49 PST, Alex Christensen
wenson_hsieh: review+
Alex Christensen
Comment 1 2018-11-16 20:49:11 PST
Wenson Hsieh
Comment 2 2018-11-16 20:54:39 PST
Comment on attachment 355177 [details] Patch r=mews
Alex Christensen
Comment 3 2018-11-16 22:03:34 PST
Radar WebKit Bug Importer
Comment 4 2018-11-16 22:04:25 PST
Note You need to log in before you can comment on or make changes to this bug.